<resources>
    <string name="app_name">Mi Caballo Zanahorio</string>
    <string name="cedica_logo">Logo de Cedica.</string>
    <string name="horse_vector">Imagen en negro del contorno de un caballo.</string>
    <string name="cedica_logo_cut">Logo de Cedica sin su texto de marca.</string>
    <string name="logo_unlp_cs">Logo de la Universidad de Informatica.</string>
    <string name="background">Background de la app. Contiene manchas.</string>
    <string name="management">Administracion</string>
    <string name="therapists">Terapeutas</string>
    <string name="user_avatar">Avatar del usuario.</string>
    <string name="begin">Iniciar</string>
    <string name="register">Registrar</string>
    <string name="modify">Modificar</string>
    <string name="user">User</string>
    <string name="add_user">Agregar</string>
    <string name="user_name">User Name</string>
    <string name="difficulty">Dificultad</string>
    <string name="play">Jugar</string>
    <string name="development_information">Informacion de desarrollo</string>
    <string name="my_profile">Mi Perfil</string>
    <string name="configuration">Configuracion</string>
    <string name="user_difficulty">Dificultad %s</string>
    <string name="about_us_developer">Desarrollo</string>"
    <string name="about_us_team">- Rojas, Agustina Sol (Dev)   \n- Glorioso Ceretti, Antonio Felix (Dev)  </string>
    <string name="about_us_colaboration">Colaboracion con"</string>
    <string name="close_button">Boton de cierre</string>
    <string name="pause_game">Boton de pausa</string>
    <string name="open_configuration">Abrir configuración</string>
    <string name="game_time">Tiempo</string>
    <string name="example_difficulty_game">Facil</string>
    <string name="errors_game">Errores</string>
    <string name="errors_quantity">0/24</string>
    <string name="game_score">Puntaje</string>
    <string name="score_game_example">0</string>
    <string name="game_clue">Pista</string>
    <string name="horse_image">Imagen de un caballo</string>
    <string name="horse_rider_image">Imagen de una jinete</string>
    <string name="table_image">Imagen de una mesa</string>
    <string name="paused_game">Juego Pausado</string>
    <string name="resume">Reanudar</string>
    <string name="confirm_button">Confirmar</string>
    <string name="music_volume">Volumen de la música</string>
    <string name="voice_volume">Volumen de voces</string>
    <string name="game_volume">Volumen del Juego</string>
    <string name="you_won">Has Ganado!</string>
    <string name="lost_errors">Has perdido por demasiados errores. :(</string>
    <string name="time_left">Tiempo restante: 00:00</string>
    <string name="errors">Errores: 0/24</string>
    <string name="difficulty_text">Dificultad: Facil</string>
    <string name="points">Puntos: 150</string>
    <string name="progress">Progreso: 100%</string>
    <string name="close">Cerrar</string>
    <string name="time_left_game">00:00</string>
    <string name="hard_scraper">Rasqueta dura.</string>
    <string name="soft_scraper">Rasqueta blanda.</string>
    <string name="hoof_pick">Escarba-vasos.</string>
    <string name="soft_brush">Cepillo blando.</string>
    <string name="hard_brush">Cepillo duro.</string>
    <string name="back_to_menu">Volver al Menu</string>
    <string name="reboot">Reiniciar</string>
    <string name="icon_add_user">Icono agregar usuario</string>
    <string name="avatar">Avatar</string>
    <string name="histories">Historiales</string>
    <string name="pacients">Pacientes</string>
    <string name="deleteAccount">Eliminar perfil</string>
    <string name="cancel">Cancelar</string>
    <string name="back_button">Boton de volver</string>
    <string name="name_hyphen">- Nombre</string>
    <string name="surname_hyphen">- Apellido</string>
    <string name="asterisk">*</string>
    <string name="easy_difficulty">Fácil</string>
    <string name="medium_difficulty">Medio</string>
    <string name="hard_difficulty">Difícil</string>
    <string name="voice_hyphen">- Voz</string>
    <string name="masculine">Masculina</string>
    <string name="feminine">Femenina</string>
    <string name="clues_hyphen">- Pistas</string>
    <string name="yes_text">Sí</string>
    <string name="no_text">No</string>
    <string name="delete_user">Eliminar a USER</string>
    <string name="delete_user_info_text">¿Estas seguro que quieres eliminar el perfil de USER? Se borraran todos sus datos de forma permanente.</string>
    <string name="age_hyphen">- Edad</string>
    <string name="age">Edad</string>
    <string name="observations_hyphen">- Observaciones</string>
    <string name="observations">Observaciones</string>
    <string name="genre_hyphen">- Genero</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="avatar_hyphen">- Avatar</string>
    <string name="avatar_1">Avatar 1</string>
    <string name="avatar_2">Avatar 2</string>
    <string name="avatar_3">Avatar 3</string>
    <string name="avatar_4">Avatar 4</string>
    <string name="avatar_5">Avatar 5</string>
    <string name="history_button">Historial</string>
    <string name="mi_caballo_zanahorio">Mi caballo Zanahorio</string>
    <string name="about_us_info_1">
        “Mi caballo Zanahorio” es un juego didáctico desarrollado como complemento terapéutico para el trabajo que realiza CEDICA (Centro de Equitación para Personas con Discapacidad). El proyecto surge del vínculo de cooperación entre CEDICA y la Facultad, un trabajo conjunto que se sostiene desde 2013.
    </string>
    <string name="about_us_info_2">
        Esta propuesta nace como continuación del juego de ensillado desarrollado en 2016, y busca abordar de manera lúdica y virtual un momento fundamental del vínculo entre el niño y el caballo: la limpieza. Esta actividad, previa a montar, permite el acercamiento, el reconocimiento y el respeto hacia el animal, y activa múltiples procesos cognitivos como la memoria, la planificación, la secuenciación y la atención.
    </string>
    <string name="about_us_info_3">
        El juego está diseñado para ser utilizado en tablets o celulares, con el objetivo de reforzar aprendizajes, facilitar la anticipación, y ofrecer una alternativa cuando las condiciones climáticas impiden el trabajo en pista.
    </string>
    <string name="about_us_info_4">
        Además de trabajar la secuencia de limpieza, también se enseñan las herramientas utilizadas, las partes del cuerpo del caballo, la forma correcta de posicionarse para limpiar, y la lógica del proceso.
    </string>
    <string name="about_us_info_5">
        Este proyecto refleja el compromiso con la inclusión, el aprendizaje significativo, y la innovación al servicio de la equinoterapia. Es fruto del trabajo colaborativo entre estudiantes, profesionales y la institución.
    </string>
    <string name="user_subdifficulty">Subnivel %s</string>
</resources>