<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cedicaLogoCut"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/cedica_logo_cut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cedica_logo_cut" />

    <FrameLayout
        android:id="@+id/avatarContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cedicaLogoCut">

        <ImageView
            android:id="@+id/profileExample"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/user_avatar"
            app:srcCompat="@drawable/first_avatar" />

        <ImageView
            android:id="@+id/modifyIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_edit_with_background" />
    </FrameLayout>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/comixloud"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/user"
        android:textColor="@color/light_font"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarContainer" />

    <LinearLayout
        android:id="@+id/buttonListUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName">

        <android.widget.Button
            android:id="@+id/patients"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/comixloud"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/pacients"
            android:textColor="@color/light_font"
            android:textSize="10sp"
            android:textStyle="bold" />


        <android.widget.Button
            android:id="@+id/therapist"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/comixloud"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/therapists"
            android:textColor="@color/light_font"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="300dp"
        android:layout_height="370dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border"
        android:gravity="center"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonListUsers"
        app:layout_constraintVertical_bias="0.250" />

</androidx.constraintlayout.widget.ConstraintLayout>
