<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <include
                android:id="@+id/commonFields"
                layout="@layout/common_fields_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/actionsAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/comixloud"
                android:text="Acciones en cuenta"
                android:textColor="@color/beige"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/commonFields" />

            <Button
                android:id="@+id/delete"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/comixloud"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/deleteAccount"
                android:textColor="@color/light_font"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/actionsAccount" />


            <LinearLayout
                android:id="@+id/buttonListUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/delete">

                <Button
                    android:id="@+id/modify"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:fontFamily="@font/comixloud"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/modify"
                    android:textColor="@color/light_font"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:fontFamily="@font/comixloud"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/cancel"
                    android:textColor="@color/light_font"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>